DuPont DevSB/src/objects/ffirule__IntegrationRuleLogLineItem__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationruleloglineitem</customHelpPage>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__CreatedDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleLog__c</fullName>
        <label>ClickLink Log</label>
        <referenceTo>ffirule__IntegrationRuleLog__c</referenceTo>
        <relationshipLabel>ClickLink Log Line Items</relationshipLabel>
        <relationshipName>IntegrationRuleLogLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__RelatedSourceLineItemTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Source Line Item Test</label>
        <referenceTo>ffirule__IntegrationRuleSourceLineItemTest__c</referenceTo>
        <relationshipLabel>Create Target Line Log</relationshipLabel>
        <relationshipName>IntegrationRuleLogLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__RelatedSourceTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Source Test</label>
        <referenceTo>ffirule__IntegrationRuleSourceTest__c</referenceTo>
        <relationshipLabel>Create Target Log</relationshipLabel>
        <relationshipName>IntegrationRuleLogLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ClickLink Log Line Item</label>
    <nameField>
        <displayFormat>SOLOGLINE-{00000000}</displayFormat>
        <label>Log Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Log Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>